=========
    
2009???? - 1.23.90

[-] * Fixed decoding of Samsung memory entries.
[-] * Properly handle corrupted messages from Nokia phones (bug #811).
[-] * Fix parsing of calls from Alcatel C701 (bug #831).
[-] * Fixed handling of error states with -len and -autolen parameters.
[-] * Fixed possible crash in DBI engine.
[+] * PostgreSQL engine properly uses sequences instead of reinventing.
    
20090302 - 1.23.1

[-] * Documentation clarification.
[-] * Translations update.
[-] * Actually install gammu-smsd-monitor.
[-] * Fix recording received messages count for MySQL.
[-] * Fix SMS location handling for Huawei E160 (bug #825).
[-] * Do not probe for MPBR support all the time.
    
20090223 - 1.23.0

[-] * Fix sending of DTMF tones over AT.
[-] * Skip some unhandled replies on Huawei (bug #823).
    
20090217 - 1.22.95

[!] * Reorganize directory structure to match current state of things.
[-] * Completely switch DBI driver to utf-8.
[-] * Fixed date off by 1900 error in some cases.
[-] * Cleanup a bit phonet driver.
[-] * Handle properly requests for network code (bug #819).
[-] * Allow to enter more security codes through SMSD (bug #819).
[-] * Fixed restoring to specific folder on AT (bug #815).
    
20090209 - 1.22.94

[-] * Fix some memory leaks found by cppcheck.
[-] * Implemented reconnecting/retrying in DBI driver.
[-] * Fix memory leaks in SMSD found by valgrind.
[-] * Fix decoding of another Nokia message type.
[-] * Support for passing received message ID in DBI.
[-] * Dummy phone now supports phonebook, calendar, todo, filesystem.
[-] * Experimental SMSD monitor support on Windows.
[-] * Added ID for Nokia 2680 (bug #813).
[-] * Number of retries of message send in SMSD can be configured.
[-] * Updated SQL files to new version (mostly added useful indexes).
[-] * Dropped own logic for generating IDs for SMS and rely on SQL
      server (only in DBI driver for now).

20090202 - 1.22.93

[-] * Fixed privileges dropping in SMSD.